[tool.poetry]
name = "qcos"
version = "2.3.4"
description = "腾讯云对象存储库，支持命令行"
authors = ["codeif <me@codeif.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/codeif/qcos"

[tool.poetry.scripts]
qcos = "qcos.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
termcolor = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "^7.4.0"

[tool.isort]
profile = "black"
float_to_top = true

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
